kubernetes/k3s-01/workloads/lidarr/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lidarr
  namespace: torrenting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
        access-postgres: "true"
    spec:
      containers:
        - name: lidarr
          image: docker.io/linuxserver/lidarr:3.1.0@sha256:37a3df74f4c2a6f10eead66f4d8034362ebf2866f935026b4a71dd888b9e7f08
          volumeMounts:
            - name: lidarr
              mountPath: /config
            - name: lidarr-downloads
              mountPath: /downloads
            - name: lidarr-music
              mountPath: /music
      volumes:
        - name: lidarr
          persistentVolumeClaim:
            claimName: lidarr
        - name: lidarr-downloads
          persistentVolumeClaim:
            claimName: lidarr-downloads
        - name: lidarr-music
          persistentVolumeClaim:
            claimName: lidarr-music
