kubernetes/k3s-01/workloads/lidarr/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: torrenting
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lidarr.47fc5c.com`)
      kind: Rule
      services:
        - name: lidarr
          kind: Service
          port: 8686
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: lidarr-certificate
